Tighten Django signals post: pre_save distinction, apps.py gotcha, bulk caveats, fix dark mode highlighting

--- a/arlind.dev/static/css/style.css
+++ b/arlind.dev/static/css/style.css
@@ -560,7 +560,7 @@ pre code {
   /* NameFunction */ .chroma .nf { color: #d2a8ff; font-weight: bold }
   /* NameFunctionMagic */ .chroma .fm {  }
   /* NameLabel */ .chroma .nl { color: #79c0ff; font-weight: bold }
-  /* NameNamespace */ .chroma .nn { color: #ff7b72 }
+  /* NameNamespace */ .chroma .nn { color: #79c0ff }
   /* NameOther */ .chroma .nx {  }
   /* NameProperty */ .chroma .py { color: #79c0ff }
   /* NameTag */ .chroma .nt { color: #7ee787 }
